# zed-db

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements-container.txt  run.py
tests/: test_benchmark.py  test_btree.py  test_engine.py  test_index.py  test_parser.py  test_schema.py
zed/: __init__.py  engine.py  index.py  query_planner.py  repl.py  schema.py  wal.py
zed/sql/: __init__.py  ast.py  parser.py  tokenizer.py
zed/storage/: __init__.py  btree.py
